install-k8s-clsuter/roles/install-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cu-ovewflow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - path: /subjects
        pathType: Prefix
        backend:
          service:
            name: subject-app-service
            port:
              number: 8080
